methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value vuBiscuit
  if(vuBiscuit != 0){
     ^MethodsReturning:14: error: not found: value vuBiscuit
      vuBiscuit=vuBiscuit+1
      ^MethodsReturning:31: error: value update is not a member of Boolean
while(haveBaggle() = false){
      ^MethodsReturning:34: error: not found: value haveBaggel
  if(!haveBaggel()){
      ^